--- a/ipu/templates/stats/stats.html
+++ b/ipu/templates/stats/stats.html
@@ -7,7 +7,7 @@
 {% block head %}
   <link type="text/css" rel="stylesheet" href="{% static 'common/css/font-awesome/css/font-awesome.min.css' %}" />
   <link type="text/css" rel="stylesheet" href="{% static 'materialize-blue.css' %}" />
-  <link type="text/css" rel="stylesheet" href="{% static 'account/css/stats.css' %}" />
+<!--  <link type="text/css" rel="stylesheet" href="{# static 'account/css/stats.css' #}" />-->
 <link rel="stylesheet" type="text/css" href="{% static 'sweetalert/dist/sweetalert.css' %}">
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -35,6 +35,7 @@
 			{% endform %}
 		</form>
 	</div>
+	<div class="col s6 offset-s3" id="stats-preloader"></div>
 	<div class="col s12" id="stats-data" style="margin-top: 5%"></div>
 </div>
 {% endblock %}
