--- a/ipu/templates/403.html
+++ b/ipu/templates/403.html
@@ -2,8 +2,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>403</title>
-  <link type="text/css" rel="stylesheet" href="../static/error.css" />
+	<title>403: Permission Denied</title>
+  <link type="text/css" rel="stylesheet" href="{% static 'error.css' %}" />
 </head>
 
 
@@ -138,9 +138,9 @@
     <h2>403</h2>
     <p>Sorry, but you are not allowed to access this page.</p>
     {% if request.user.is_authenticated %}
-		<a href="{{ request.user.get_home_url }}" class="button">Homepage</a>
+		<a href="{{ request.user.get_home_url }}" class="button">Go Home</a>
 		{% else %}
-		<a href="{% url ‘landing’ %}" class="button">Back to site</a>
+		<a href="{% url 'landing' %}" class="button">Back to site</a>
 	{% endif %}
   </div>
 
