--- a/ipu/templates/404.html
+++ b/ipu/templates/404.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <link type="text/css" rel="stylesheet" href="{% static 'error.css' %}" />
-  <title>400: Page Not Found</title>
+  <title>404: Page Not Found</title>
 </head>
 
 
@@ -138,9 +138,9 @@
     <h2>404</h2>
     <p>Sorry but the page you are looking for cannot be found.</p>
     {% if request.user.is_authenticated %}
-		<a href="{{ request.user.get_home_url }}" class="button">Homepage</a>
+		<a href="{{ request.user.get_home_url }}" class="button">Go Home</a>
 		{% else %}
-		<a href="{% url ‘landing’ %}" class="button">Back to site</a>
+		<a href="{% url 'landing' %}" class="button">Back to site</a>
 	{% endif %}
   </div>
 
