--- a/ipu/static/account/css/intro.css
+++ b/ipu/static/account/css/intro.css
@@ -16,6 +16,15 @@ html, body, .block {
         z-index: 654654656515;
       }
 
+
+nav .brand-logo {
+    position: absolute;
+    color: #fff;
+    display: inline-block;
+    font-size: 2.1rem;
+    padding: 0;
+    white-space: nowrap;
+}
       #corner-button2
     {
     position: fixed;
@@ -125,44 +134,86 @@ html, body, .block {
 
    #img-line img
    {
-      width: 100%;
+      width: 95%;
+      height: 100%;
+
    }   
+
+      #img-line
+      {
+        display: flex;
+        height: 50%;
+        width: 100%;
+        margin-bottom: 10px;
+      }
 
     #icon-college
     {
-      height: 150px;
-      width: 170px;
+      height: 50px;
+      width: 60px;
     }
+
+    nav .brand-logo {
+    position: absolute;
+    color: #fff;
+    display: inline-block;
+    font-size: 1.2rem;
+    padding: 0;
+    white-space: nowrap;
+}
+
+nav .brand-logo {
+    left: 40%;
+    -webkit-transform: translateX(-50%);
+    transform: translateX(-50%);
+}
 
    #data p
       {
-        padding: 10px;
+        padding: 4px;
         padding-top: 2px;
-        font-size: 30px; 
+        font-size: 10px; 
         padding-bottom: 0px;
       }
    #data ul li
       {
-        margin-top: 5px;
+        margin-top: 1px;
         font-weight: bold;
-        font-size: 30px;
-        list-style-type: disc
+        font-size: 10px;
+        list-style-type: disc;
       }
 
    #red p
       {
-        padding: 10px;
+        padding: 5px;
         padding-top: 2px;
-        font-size: 35px; 
-        margin-top: 10px;
-      }      
+        font-size: 10.5px; 
+        margin-top: 3px;
+      }    
+
    #green p
       {
-        padding: 10px;
+        padding: 5px;
         padding-top: 2px;
-        font-size: 35px; 
-        margin-top: 10px;
+        font-size: 12px; 
+        margin-top: 5px;
       }   
+
+
+      #corner-button2
+    {
+    position: fixed;
+    line-height: 40px;
+    font-size: 12px;
+    padding: 1px;
+    padding-bottom: 5px;
+    top: 6px;
+    right: 2px;
+    width: 110px;
+    height: 40px;
+    z-index: 50285154165;
+    background-color: #337ab7;
+    }
 
 
 }
@@ -171,9 +222,35 @@ html, body, .block {
 
    #img-line img
    {
-      width: 100%;
+      width: 95%;
       height: 90%;
+      margin-left: 2.5%;
    }   
+
+   #img-line
+      {
+        display: flex;
+        height: 100px;
+        width: 100%;
+        margin-bottom: 10px;
+      }
+
+    nav .brand-logo {
+    position: absolute;
+    color: #fff;
+    display: inline-block;
+    font-size: 1.5rem;
+    padding: 0;
+    white-space: nowrap;
+}
+
+nav .brand-logo {
+    left: 30%;
+    -webkit-transform: translateX(-50%);
+    transform: translateX(-50%);
+}
+
+
 
     #icon-college
     {
@@ -183,33 +260,77 @@ html, body, .block {
 
    #data p
       {
-        padding: 10px;
-        padding-top: 2px;
-        font-size: 14px; 
+        padding: 5px;
+        padding-top: 0px;
+        font-size: 8.5px; 
         padding-bottom: 0px;
+        margin-bottom: 1px;
+      }
+
+      #data ul
+      {
+
+        margin-top: 1px;
       }
    #data ul li
       {
         margin-top: 1px;
         font-weight: bold;
-        font-size: 12px;
+        font-size: 8px;
         list-style-type: disc
       }
 
    #red p
       {
-        padding: 10px;
+        padding: 5px;
         padding-top: 2px;
-        font-size: 10px; 
+        font-size: 9px; 
         margin-top: 2px;
       }      
    #green p
       {
-        padding: 10px;
+        padding: 5px;
         padding-top: 2px;
-        font-size: 15px; 
+        font-size: 8.5px; 
         margin-top: 5px;
       }   
+
+      nav {
+    color: #fff;
+    background-color: #ee6e73;
+    width: 100%;
+    height: 45px;
+    line-height: 45px;
+}
+
+       #corner-button2
+    {
+    position: fixed;
+    line-height: 35px;
+    font-size: 13px;
+    padding: 1px;
+    padding-bottom: 5px;
+    top: 4.5px;
+    right: 2px;
+    width: 150px;
+    height: 35px;
+    z-index: 50285154165;
+    background-color: #337ab7;
+    }
+
+     #corner-button
+      {
+        position: fixed;
+        top: -5px;
+        left: 20px;
+        z-index: 654654656515;
+      }
+
+    #icon-college
+    {
+      height: 50px;
+      width: 60px;
+    }
 
 
 }      
