--- a/ipu/templates/account/team.html
+++ b/ipu/templates/account/team.html
@@ -37,15 +37,17 @@
         <div class="row">
           <div class="col s12 m2 offset-m2 center-on-small-only ">
             <div class="image-container"> 
-              <img src="{% static 'account/images/team/bob.jpg' %}" class="circle responsive-img" height="160px" width="160px">
+              <img src="{% static 'account/images/team/bob.jpg' %}" class="circle responsive-img">
             </div>
           </div>
           <div class="col s12 m6">
               <h4>Pratulya Bubna</h4>
               <p>Alvin is an Information Systems and Human Computer Interaction Major. He worked as a Software Engineer at Fidelity Investments this past summer.</p>
+               <div id="tags">
               <a><i class="fa fa-google-plus-square fa-2x gmail-icon" aria-hidden="true"></i></a>
               <a><i class="fa fa-facebook-square fa-2x icons fb-icon" aria-hidden="true"></i></a>
               <a><i class="fa fa-linkedin-square fa-2x icons linkedin-icon" aria-hidden="true"></i></a>
+              </div>
           </div>
           
         </div>
@@ -53,31 +55,35 @@
         <div class="row">
           <div class="col s12 m2 offset-m2 center-on-small-only">
             <div class="image-container">
-              <img src="{% static 'account/images/team/rajjo.jpg' %}" class="circle responsive-img" height="160px" width="160px">
+              <img src="{% static 'account/images/team/rajjo.jpg' %}" class="circle responsive-img">
               </div>
           </div>
           <div class="col s12 m6">
             <h4>Rajneesh Sharma</h4>
             <p>Alan is an Information Systems major with a minor in computer science. He worked at as a Front End Developer at Shift Collaborative this past summer.</p>
+             <div id="tags">
               <a><i class="fa fa-google-plus-square fa-2x gmail-icon" aria-hidden="true"></i></a>
               <a><i class="fa fa-facebook-square fa-2x icons fb-icon" aria-hidden="true"></i></a>
               <a><i class="fa fa-linkedin-square fa-2x icons linkedin-icon" aria-hidden="true"></i></a>
+          	 </div>	
           </div>
         </div>
 
         <div class="row">
           <div class="col s12 m2 offset-m2 center-on-small-only">
             <div class="image-container">
-            <img src="{% static 'account/images/team/shivam.jpg' %}" class="circle responsive-img" height="160px" width="160px">
+            <img src="{% static 'account/images/team/shivam.jpg' %}" class="circle responsive-img">
               </div>
           </div>
           <div class="col s12 m6">
             <h4>Shivam Sharma</h4>
             <p>Alex is an Information Systems major with a minor in Human Computer Interaction. He worked as a software developer for Intuit this past summer.</p>
+             <div id="tags">
               <a><i class="fa fa-google-plus-square fa-2x gmail-icon" aria-hidden="true"></i></a>
               <a><i class="fa fa-facebook-square fa-2x icons fb-icon" aria-hidden="true"></i></a>
               <a><i class="fa fa-linkedin-square fa-2x icons linkedin-icon" aria-hidden="true"></i></a>
-          </div>
+         	 </div>	 
+          	</div>
         </div>
    </div>   
 {% endblock %}
